# boba-fett-v3

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  docker-compose.yml  opencode.json  package.json
.atl/: .skill-registry.cache.json  skill-registry.md
.github/workflows/: ci.yml  deploy-backend.yml  deploy-frontend.yml
apps/backend/: .env.example  DOCUMENTATION.md  Dockerfile  alembic.ini  package.json  pyproject.toml  requirements.txt
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: fc163426f0af_initial_schema.py
apps/backend/src/agent/: file_utils.py  graph.py  models.py  nodes.py  prompts.py  search.py  state.py  tools.py
apps/backend/src/api/: admin_routes.py  auth_routes.py  chat_routes.py  routes.py
apps/backend/src/auth/: __init__.py  dependencies.py  models.py  passwords.py  repository.py  seed.py  tokens.py
apps/backend/src/db/: __init__.py  catalog_repository.py  connection.py  excel.py  models.py  repository.py  schema.sql  seed_catalog.py  tables.py  versioning.py
apps/backend/tests/: conftest.py  test_admin_routes.py  test_auth_dependencies.py  test_auth_integration.py  test_auth_models.py  test_auth_passwords.py  test_auth_repository.py  test_auth_routes.py  test_auth_seed.py  test_auth_tokens.py  test_chat_routes.py  test_excel.py  test_graph.py  test_integration.py  test_models.py  test_routes_chat_lifespan.py  test_routes_guarded.py  test_search.py  test_state.py  test_tools.py  test_versioning_routes.py
apps/backend/tests/integration/: __init__.py  conftest.py  test_admin_catalog_pg.py  test_catalog_repository_pg.py  test_chat_pg.py  test_repository_audit_pg.py  test_routes_pg.py  test_tools_pg.py  test_versioning_repository_pg.py
apps/web/: .env.example  DOCUMENTATION.md  Dockerfile  ecosystem.config.js  middleware.ts  next.config.ts  package.json  vitest.config.ts
apps/web/__tests__/: admin-portfolio-approval.test.tsx  bulk-accept-bar.test.tsx  comparison-view.test.tsx  propose-product-card.test.tsx  snapshot-creation.test.tsx  versioning-drawer.test.tsx
apps/web/app/: assistant.tsx  globals.css  layout.tsx  page.tsx
apps/web/lib/: categories.ts  chatApi.ts  compositionPalette.ts  fetchWithAuth.ts  format.ts  portfolio-types.ts  portfolioEvents.ts  portfolioId.ts  threadListAdapter.ts  usePortfolio.ts  usePortfolioVersioning.ts
openspec/: config.yaml
openspec/changes/bootstrap-assistant-monorepo/: design.md  tasks.md
openspec/changes/multi-level-search/: design.md  proposal.md  tasks.md
openspec/changes/portfolio-versioning/: design.md  proposal.md  tasks.md
openspec/changes/product-catalog-approval/: proposal.md  tasks.md
openspec/changes/sabbi-auth/: design.md  proposal.md  tasks.md
openspec/changes/sabbi-portfolio-agent/: design.md  proposal.md  tasks.md  verify-report.md
openspec/changes/sabbi-ui-refinement/: design.md  proposal.md  tasks.md
openspec/specs/access-control/: spec.md
openspec/specs/admin-panel/: spec.md
openspec/specs/assistant-chat-runtime/: spec.md
openspec/specs/assistant-monorepo-foundation/: spec.md
openspec/specs/backend-integration-testing/: spec.md
(+83 files in other folders)
