[project]
name = "boba-fett-backend"
version = "0.1.0"
description = "LangGraph agent backend for the boba-fett-v3 assistant monorepo"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.4",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.3",
    "langgraph-cli[inmem]>=0.1.55",
    "langgraph-checkpoint-postgres>=3.0",
    "psycopg[binary,pool]>=3.3",
    "typing-extensions>=4.0",
    "asyncpg>=0.29",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "openpyxl>=3.1",
    "bcrypt>=4.1",
    "PyJWT>=2.8",
    "tavily-python>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
# Real-Postgres fixtures (`tests/conftest.py`) hold one asyncpg connection
# open for the whole session; asyncpg connections are bound to the event
# loop that created them, so fixtures AND tests must share a single
# session-scoped loop instead of pytest-asyncio's per-function default.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
